# slurm_tools

./: pyproject.toml
src/slurm_tools/: __init__.py
src/slurm_tools/jobs/: array.py
src/slurm_tools/parameters/: __init__.py  array_parameters.py
src/slurm_tools/templates/: __init__.py  array_template.sht
src/slurm_tools/tests/: test_array_job_creation.py
src/slurm_tools/utils/: reading_templates.py
