[project]
name = "slurm-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Miguel González Duque", email = "miguelgondu@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
